--- a/src/main/resources/templates/add-object.html
+++ b/src/main/resources/templates/add-object.html
@@ -26,7 +26,9 @@
             <!-- Sidebar Image -->
             <!-- Name -->
             <div class="name">
-                <a href="ui-304.html#"><h3>Login</h3></a>
+                <h3 th:text="${#request.userPrincipal.name}"></h3>
+                <br>
+                <a th:href="@{/logout}">выйти</a>
             </div>
             <div class="clearfix"></div>
         </div>
