--- a/src/main/resources/templates/admin-user.html
+++ b/src/main/resources/templates/admin-user.html
@@ -1,20 +1,20 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
 <head>
-    <meta charset="utf-8">
+    <meta charset="utf-8"/>
     <title>UI Design</title>
 
     <!-- Styles -->
     <!-- Bootstrap CSS -->
-    <link href="css/bootstrap.min.css" rel="stylesheet">
+    <link href="css/bootstrap.min.css" rel="stylesheet"/>
     <!-- Font awesome CSS -->
-    <link href="css/font-awesome.min.css" rel="stylesheet">
+    <link href="css/font-awesome.min.css" rel="stylesheet"/>
 
 
     <!-- Main CSS -->
-    <link href="css/style-304.css" rel="stylesheet">
+    <link href="css/style-304.css" rel="stylesheet"/>
 
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"/>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
     <style>
@@ -26,7 +26,7 @@
     </style>
 
     <!-- Favicon -->
-    <link rel="shortcut icon" href="ui-304.html#">
+    <link rel="shortcut icon" href="ui-304.html#"/>
 </head>
 
 <body>
@@ -40,8 +40,8 @@
             <!-- Name -->
             <div class="name">
                 <h3 th:text="${#request.userPrincipal.name}"></h3>
-                <br>
-                <a th:href="@{/logout}">выйти</a>
+                <br></br>
+                <a th:href="@{/logout}">Выйти</a>
             </div>
             <div class="clearfix"></div>
         </div>
