Добавление продавцов и их документов

--- a/src/main/resources/static/css/style-304.css
+++ b/src/main/resources/static/css/style-304.css
@@ -597,7 +597,7 @@ hr {
 }
 .resume .main-block a,
 .resume .main-block a:hover{
-	color:#fff;
+	color: #000000;
 }
 .resume .main-block .objective-content p{
 	color:#000;
