--- a/src/main/resources/templates/add-object.html
+++ b/src/main/resources/templates/add-object.html
@@ -39,9 +39,9 @@
                 <div class="ui-item">
                     <!-- Unordered list -->
                     <ul class="list-unstyled">
-                        <li><a href="ui-85.html#">Объекты</a></li>
-                        <li><a href="ui-85.html#">Продавцы</a></li>
-                        <li><a href="ui-85.html#">Покупатели</a></li>
+                        <li><a href="/managers/objects">Объекты</a></li>
+                        <li><a href="/managers/clients/sellers">Продавцы</a></li>
+                        <li><a href="">Покупатели</a></li>
                     </ul>
                 </div>
             </div>
