--- a/src/main/resources/templates/admin-user.html
+++ b/src/main/resources/templates/admin-user.html
@@ -12,7 +12,7 @@
 
 
     <!-- Main CSS -->
-    <link href="css/style-304.css" rel="stylesheet"/>
+    <link th:href="@{/css/style-304.css}" rel="stylesheet"/>
 
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"/>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
