--- a/src/main/resources/templates/add-buyer.html
+++ b/src/main/resources/templates/add-buyer.html
@@ -21,12 +21,12 @@
     <!-- Main -->
     <div class="main-block bg-white">
         <div class="objective">
-            <h3>Добавление продавца</h3>
+            <h3>Добавление покупателя</h3>
             <div class="objective-content">
                 <!-- Контент -->
                 <div class="row">
-                    <form th:action="@{/managers/clients/sellers/add}"
-                          th:object="${seller}" method="post" enctype="multipart/form-data">
+                    <form th:action="@{/managers/clients/buyers/add}"
+                          th:object="${buyer}" method="post" enctype="multipart/form-data">
                         <table class="table table-hover">
                             <thead>
                             <tr>
@@ -54,6 +54,12 @@
                                         <label class="form-label">Добавить документы</label>
                                         <input class="form-control" type="file" name="fileName" multiple="multiple"/>
                                     </div>
+                                </td>
+                            </tr>
+                            <tr>
+                                <td scope="row"><p> Описание </p></td>
+                                <td>
+                                    <textarea th:field="*{description}" class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
                                 </td>
                             </tr>
                             </tbody>
