--- a/src/main/resources/templates/add-seller.html
+++ b/src/main/resources/templates/add-seller.html
@@ -6,7 +6,7 @@
     <!-- Description, Keywords and Author -->
     <link th:href="@{/css/style-304.css}" rel="stylesheet"/>
 
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css"/>
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js"></script>
 </head>
@@ -24,7 +24,7 @@
             <h3>Добавление продавца</h3>
             <div class="objective-content">
                 <!-- Контент -->
-                <div class="row">
+                <div>
                     <form th:action="@{/managers/clients/sellers/add}"
                           th:object="${seller}" method="post" enctype="multipart/form-data">
                         <table class="table table-hover">
