--- a/src/main/resources/templates/all-buyer.html
+++ b/src/main/resources/templates/all-buyer.html
@@ -6,7 +6,7 @@
 
     <link th:href="@{/css/style-304.css}" rel="stylesheet"/>
 
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css"/>
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js"></script>
 </head>
@@ -21,10 +21,10 @@
     <!-- Main -->
     <div class="main-block bg-white">
         <div class="objective">
-            <h3>Продавцы</h3>
+            <h3>Покупатели</h3>
             <div class="objective-content">
                 <!-- Контент -->
-                <a href="/managers/clients/buyers/add" class="btn btn-lg btn-primary btn-block" role="button" aria-pressed="true">Добавить продавца</a>
+                <a href="/managers/clients/buyers/add" class="btn btn-lg btn-primary btn-block" role="button" aria-pressed="true">Добавить покупателя</a>
                 <div class="bs-example" >
                     <div class="accordion" id="accordionExample">
                         <div class="card" th:each="buyer,iterator : ${buyers}" th:with="backet='okm3agency'">
