--- a/src/main/resources/templates/main-manager.html
+++ b/src/main/resources/templates/main-manager.html
@@ -4,17 +4,11 @@
     <meta charset="utf-8"/>
     <title>UI Design</title>
 
-    <!-- Styles -->
-    <!-- Bootstrap CSS -->
-    <link th:href="@{/css/bootstrap.min.css}" rel="stylesheet"/>
-    <!-- Font awesome CSS -->
-    <link th:href="@{/css/font-awesome.min.css}" rel="stylesheet"/>
-
-<!--    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css">-->
-<!--    <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>-->
-<!--    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js"></script>-->
-    <!-- Main CSS -->
     <link th:href="@{/css/style-304.css}" rel="stylesheet"/>
+
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css"/>
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js"></script>
 
 </head>
 
@@ -30,51 +24,41 @@
         <div class="objective">
             <h3>Объекты</h3>
             <div class="objective-content">
+                <a href="/managers/objects/add" class="btn btn-lg btn-primary btn-block" role="button" aria-pressed="true">Добавить объект</a>
                 <!-- Контент -->
-                <div class="row">
-                    <div class="col-sm-6">
-                        <p><a href="/managers/objects/add">
-                        <div class="card">
-                            <div class="row no-gutters">
-                                <div class="col-md-6">
-                                    <img src="/image/add.png" class="card-img" alt="..."/>
+                <div th:each="obgect : ${objects}">
+                    <a th:href="'/managers/objects/update/'+ ${obgect.getIdObject()}">
+                        <div class = "row my_card" >
+                            <div class="col-4">
+                                <img src="/image/city.jpg" class="card-img" alt="..."/>
+                                <a th:href="'/managers/objects/delete/'+ ${obgect.getIdObject()}" onclick="return confirm('Вы действительно хотите удалить объект?')">
+                                    <img src="/image/delete.png" class="close" alt="удоли"/>
+                                </a>
+                            </div>
+                            <div class = "col-8">
+                                <div class="row">
+                                    <div class="col-4 price">
+                                        <h4 th:text="${obgect.price}">ЦЕНА</h4>
+                                    </div>
+                                    <div class="col-8 info">
+                                        <h6 th:text="${obgect.countRoom}+' к, '+ ${obgect.square} + ' м2'"></h6>
+                                        <p th:text="${obgect.getCountFloor()}+' этаж'">Этаж</p>
+                                        <p th:text="${obgect.adress}">Адрес</p>
+                                        <!--                                <p th:text="${obgect.}">Тип</p>-->
+                                    </div>
+                                </div>
+                                <div class="desc">
+                                    очнень много буквочнень много буквочнень много буквочнень много буквочнень много буквочнень много буквочнень много буквочнень много буквочнень много буквочнень много буквочнень много буквочнень много буквочнень много буквочнень много буквочнень много буквочнень много буквочнень много буквочнень много буквочнень много буквочнень много буквочнень много
                                 </div>
                             </div>
                         </div>
-                        </a></p>
-                    </div>
-                    <div th:each="obgect, iterStatus : ${objects}">
-                        <div class="col-sm-6">
-                            <p><a href="sample.html">
-                            <div class="card">
-                                <div class="row no-gutters">
-                                    <div class="col-md-6">
-                                        <img src="/image/city.jpg" class="card-img" alt="..."/>
-                                        <h5 class="card-title" th:text="${obgect.adress}"></h5>
-                                    </div>
-                                    <div class="col-md-2">
-                                        <div class="card-body">
-                                            <p class="card-text"th:text="${obgect.square}"></p>
-                                            <p class="card-text"th:text="${obgect.countRoom}"></p>
-                                            <p class="card-text">цена:<br th:text="${obgect.price}"></p>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                            </a></p>
-                        </div>
-                    </div>
+                    </a>
                 </div>
+                <!-- Clearfix -->
+                <div class="clearfix"></div>
             </div>
-            <!-- Clearfix -->
-            <div class="clearfix"></div>
         </div>
     </div>
 </div>
-        <!-- Resume Ends -->
-
-        <!-- Javascript files -->
-        <!-- jQuery -->
-
 </body>
 </html>
