--- a/src/main/resources/templates/all-buyer.html
+++ b/src/main/resources/templates/all-buyer.html
@@ -23,6 +23,18 @@
         <div class="objective">
             <h3>Покупатели</h3>
             <div class="objective-content">
+                <!-- Фильтр -->
+                <form th:action="@{/managers/clients/buyers}" id="filter"
+                      method="get" >
+                    <div class="input-group">
+                        <input name="search" type="text" class="form-control" placeholder="Поиск" aria-label="Recipient's username with two button addons" aria-describedby="button-addon4">
+                        <div class="input-group-append" id="button-addon4">
+                            <button class="btn btn-outline-primary" type="submit">Найти</button>
+                            <a class="btn btn-outline-danger" id="clean">Сбросить</a>
+                        </div>
+                    </div>
+                </form>
+                <h3></h3>
                 <!-- Контент -->
                 <a href="/managers/clients/buyers/add" class="btn btn-lg btn-primary btn-block" role="button" aria-pressed="true">Добавить покупателя</a>
                 <div class="bs-example" >
@@ -61,5 +73,6 @@
 
     <!-- Javascript files -->
     <!-- jQuery -->
+    <script th:src="@{/js/clear.js}"></script>
 </body>
 </html>
